--- a/section1.tex
+++ b/section1.tex
@@ -44,7 +44,7 @@ Figure~\ref{fig:vcs-architecture} shows the VCS pipeline, which computes semanti
 \begin{figure*}[t]
 \centering
 \includegraphics[width=0.8\textwidth]{images/VCS.pdf}
-\caption{VCS Pipeline. The VCS assesses video descriptions by comparing a reference text ($T_{ref}$) with a model-generated text ($T_{gen}$). Both texts are initially segmented by SaT and embedded via NV-Embed-v2. The Global Alignment Score (GAS) is computed from the full text embeddings. For localized analysis, texts are chunked and embedded, forming a similarity matrix. From this, precision and recall-oriented best matches yield the Local Alignment Score (LAS)—the harmonic mean of $LAS_P$ (precision) and $LAS_R$ (recall). The Narrative Alignment Score (NAS) incorporates distance-based ($NAS_D$) and line-based ($NAS_L$) assessments. $NAS_D$ and $NAS_L$ are harmonic means of their respective precision and recall components. A Window Regularizer ($R_W$) refines the NAS. The Semantic Alignment Score (SAS) is derived by modulating GAS with LAS. The final VCS results from modulating the smaller of SAS and the regularized NAS with the larger.}
+\caption{VCS Pipeline. The VCS assesses video descriptions by comparing a reference text ($T_{ref}$) with a model-generated text ($T_{gen}$). Both texts are initially segmented by SaT and embedded via NV-Embed-v2. The Global Alignment Score (GAS) is computed from the full text embeddings. For localized analysis, texts are chunked and embedded, forming a similarity matrix. From this, precision and recall-oriented best matches yield the Local Alignment Score (LAS)—the harmonic mean of $LAS_P$ (precision) and $LAS_R$ (recall). The Narrative Alignment Score (NAS) incorporates distance-based ($NAS_D$) and line-based ($NAS_L$) assessments. $NAS_D$ and $NAS_L$ are harmonic means of their respective P and R components. A Window Regularizer ($R_w$) refines the NAS. The Semantic Alignment Score (SAS) combines GAS and LAS through two-stage semantic assessment. The final VCS integrates SAS with the regularized NAS where the weaker component regularizes the stronger one.}
 \label{fig:vcs-architecture}
 \end{figure*}
 
@@ -70,11 +70,11 @@ Before establishing chunk correspondences for fine-grained assessment, VCS const
 \end{equation}
 which represents the cosine similarity between the $i$-th reference chunk and $j$-th generated chunk.
 
-However, before selecting the best match for each chunk, VCS defines Mapping Windows (MW) that constrain the search space within this similarity matrix. This concept stems from empirical observations: when computing pairwise chunk embeddings between identical long-form descriptions, the resulting similarity matrix exhibits a clear diagonal structure where $C_1^{ref}$ maps to $C_1^{gen}$, $C_2^{ref}$ maps to $C_2^{gen}$, and so on, with this diagonal pattern stretching or compressing proportionally in brevity or verbosity cases. Hence, for given chunk counts $N_{ref}$ and $N_{gen}$, we define this diagonal search space and call it Mapping Windows—regions where each chunk should ideally map.
+VCS defines Mapping Windows (MW) that constrain the search space within this similarity matrix based on diagonal alignment patterns observed in ideal narratives.
 
-VCS identifies the longer sequence as $\max(N_{ref}, N_{gen})$ and the shorter sequence as $\min(N_{ref}, N_{gen})$. We compute slope $s = \text{longer}/\text{shorter}$ and base window height $h_{mw} = \lceil s \rceil$. The algorithm creates direct windows by mapping each position $i$ in the shorter sequence to a window of height $h_{mw}$ in the longer sequence, spanning range $[\lfloor i \cdot s \rfloor, \min(\lfloor i \cdot s \rfloor + h_{mw}, \text{longer}))$ with proportional scaling. Reverse windows invert this mapping: for each position in the longer sequence, we determine which positions in the shorter sequence include it. VCS assigns Precision Windows ($MW_p$) and Recall Windows ($MW_r$) based on sequence direction: when $N_{ref} \geq N_{gen}$, precision uses direct windows and recall uses reverse windows; otherwise, assignments are reversed.
+VCS identifies the longer sequence as $\max(N_{ref}, N_{gen})$ and the shorter sequence as $\min(N_{ref}, N_{gen})$. We compute slope $s = \text{longer}/\text{shorter}$ and base window height $h_{mw} = \lceil s \rceil$, which represents the minimum height needed for each mapping window to ensure complete coverage of the timeline ratio. The algorithm creates direct windows by mapping each position $i$ in the shorter sequence to a window of height $h_{mw}$ in the longer sequence, spanning range $[\lfloor i \cdot s \rfloor, \min(\lfloor i \cdot s \rfloor + h_{mw}, \text{longer}))$ with proportional scaling. Reverse windows invert this mapping: for each position in the longer sequence, we determine which positions in the shorter sequence include it. VCS assigns Precision Windows ($MW_p$) and Recall Windows ($MW_r$) based on sequence direction: when $N_{ref} \geq N_{gen}$, precision uses direct windows and recall uses reverse windows; otherwise, assignments are reversed.
 
-We define $MW_p = \{[s_i, e_i)\}$ as the set of precision Mapping Windows and $MW_r = \{[s_j, e_j)\}$ as the set of recall Mapping Windows, where each window $[s_k, e_k)$ represents the start and end indices of the $k$-th mapping window.
+We define $MW_p = \{[s_i, e_i)\}$ as the set of precision Mapping Windows and $MW_r = \{[s_j, e_j)\}$ as the set of recall Mapping Windows, where each window $[s_k, e_k)$ represents the half-open interval from start index $s_k$ (inclusive) to end index $e_k$ (exclusive) of the $k$-th mapping window.
 
 \subsubsection{Best Matching Algorithm}
 Having established Mapping Windows within the similarity matrix $\mathbf{S}$, VCS pairs each generated chunk with its best reference counterpart, and vice versa. Naively selecting the highest-similarity reference for each generated chunk leads to semantic collision and semantic ambiguity. Semantic collision occurs when a single chunk exhibits identical similarity to multiple counterparts, while semantic ambiguity arises when a chunk achieves nearly equal similarity with multiple candidates. Both issues stem from repeated events or superficial lexical overlap, obscuring true narrative counterparts.
@@ -104,12 +104,12 @@ LAS = \frac{2 \cdot LAS_P \cdot LAS_R}{LAS_P + LAS_R}
 However, LAS remains insensitive to chronological ordering and exhibits limited sensitivity to missing or extra content. While LAS performs local semantic alignment and can detect content variations, its reliance on semantic similarity averaging means that even weak semantic matches contribute to the overall score, reducing its ability to strongly penalize missing or extraneous content. To mitigate both limitations, VCS introduces NAS that evaluates chronological consistency while enhancing sensitivity to content gaps and additions through narrative alignment assessment. NAS comprises four components: Distance-based NAS ($NAS_D$), Line-based NAS ($NAS_L$), a window regularizer, and the user-controlled Local Narrative Tolerance (LNT) parameter.
 
 \subsubsection{Defining Local Narrative Tolerance (LNT)}
-Before assessing narrative alignment, VCS defines a user-controlled parameter called LNT. This concept stems from the observation that video narratives often permit multiple valid orderings and descriptive variations where temporally adjacent or concurrent events can be described in different sequences and detail levels without compromising narrative coherence. Complex video scenes frequently contain multiple actors and objects performing concurrent actions, where these details can be expressed in multiple valid orders and varying descriptive granularity—from highly detailed to moderate to sparse descriptions. To accommodate this inherent flexibility, VCS employs LNT as a tolerance parameter that defines acceptable deviation from strict chronological order and descriptive consistency, allowing higher LNT values to provide tolerance for both narrative reordering and descriptive variability when dense descriptions describe scenes with slightly different detail levels.
+Before assessing narrative alignment, VCS applies the user-controlled Local Narrative Tolerance (LNT) parameter. As established above, LNT accommodates natural narrative variations by providing tolerance for both chronological reordering and descriptive variability.
 
 \subsubsection{Distance-based NAS ($NAS_D$)}
 Mapping Windows define where chunks should ideally match if the narrative structure is preserved between reference and generated descriptions, establishing the global position of matched chunks. $NAS_D$ formalizes this intuition by penalizing each chunk based on its distance from the ideal region defined by the Mapping Windows, making it particularly sensitive to global chronological alignment violations. For precision evaluation, $NAS_D$ uses correspondence set $M_P$ and precision Mapping Windows $MW_p$; for recall evaluation, it uses correspondence set $M_R$ and recall Mapping Windows $MW_r$.
 
-However, before computing penalties, VCS applies Local Narrative Tolerance (LNT) to account for natural narrative variations. LNT expands each Mapping Window with penalty-free zones, recognizing that chunks matching within these expanded regions represent acceptable chronological alignments.
+However, before computing penalties, VCS applies LNT to expand each Mapping Window with penalty-free zones, recognizing that chunks matching within these expanded regions represent acceptable chronological alignments.
 
 \paragraph{Local Narrative Tolerance (LNT)}
 We first compute the LNT window height:
@@ -157,7 +157,7 @@ L_{\max} &= \max_{y_i \in MW} \sum_{i=1}^{n-1} \sqrt{(x_{i+1} - x_i)^2 + (y_{i+1
 These bounds are obtained through dynamic programming over consecutive windows: each candidate position $y_{i+1}$ is evaluated from every candidate position $y_i$ with edge-weight $\sqrt{1^2 + (y_{i+1} - y_i)^2}$. Tracing predecessors yields the optimal floor path (shortest line) and ceil path (longest line). The vertical differences $\Delta y_i^{\text{floor}}$ along the floor path are cached as $\text{DY}_{\text{floor}}[x_i] = \Delta y_i^{\text{floor}}$ to later constrain oversized jumps when LNT is applied.
 
 \paragraph{Local Narrative Tolerance (LNT)}
-To accommodate natural narrative variations in local flow, VCS applies LNT to define acceptable vertical jump ranges between consecutive alignment points. The base tolerance window $\omega_0$ and its LNT-expanded version $\omega_{LNT}$ are computed using the mapping window height $h_{mw} = \lceil L_t/L_s \rceil$, where $L_s$ and $L_t$ represent source and target timeline lengths respectively:
+To accommodate natural narrative variations in local flow, VCS applies LNT to define acceptable vertical jump ranges between consecutive alignment points. The base tolerance window $\omega_0$ and its LNT-expanded version $\omega_{LNT}$ are computed using the previously defined mapping window height $h_{mw}$, where $L_s$ and $L_t$ represent source and target timeline lengths respectively:
 \begin{align}
 \omega_0 &= \begin{cases}
 h_{mw}, & L_t \leq L_s, \\
